# OpenCVExample

./: ActionItem.txt  ReadMe.md  ReadMe.md.bak
1-1打開相機/: CMakeLists.txt  Note.md  OpenCamera.cpp
1-2讀取影像並轉檔儲存/: CMakeLists.txt  LoadImageAndSave.cpp  Note.md
2-1創建TrackBar可調值/: CMakeLists.txt  TrackerBarExample.cpp
2-2偵測滑鼠的座標/: CMakeLists.txt  DetecMouseCoordinate.cpp
3-1門檻值的調整(二值化)/: CMakeLists.txt  ImageBinaryThreshold.cpp  Note.md
3-2加入形狀/: AddPatternToImage.cpp  CMakeLists.txt
3-3將圖片加入隨機的雜訊/: AddRandomNoise.cpp  CMakeLists.txt
3-4將雜訊的圖片濾波(BoxFilter, 中值濾波, bilateral filter)/: CMakeLists.txt  FilterExample.cpp
3-5侵蝕與膨脹/: CMakeLists.txt  Erosion_Dilation.cpp
3-6加強圖片對比/: CMakeLists.txt  ImageEqualHistogram.cpp
4-1_Canny邊緣偵測器/: CMakeLists.txt  CannyEdgeDetection.cpp
4-2_Hough轉換找線/: CMakeLists.txt  HoughFindLine.cpp
4-3_離散傅立葉轉換/: CMakeLists.txt  DiscreteFourierTransform.cpp
5-0一些關鍵點和描述子紀錄/: Note.md
5-1_ORB特徵匹配/: CMakeLists.txt  ORBFeatureMatcher.cpp
5-1_稀疏光流Lucas-Kanade/: SparseOpticalFlowLucasKanade.cpp
5-1稀疏光流Lucas-Kanade/: CMakeLists.txt  SparseOpticalFlowLucasKanade.cpp
5-2_ORB特徵匹配/: CMakeLists.txt  ORBFeatureMatcher.cpp
6-1_Kalman濾波/: CMakeLists.txt  KalmanFIlter.cpp
6-2_Kalman濾波(追蹤滑鼠範例)/: CMakeLists.txt  KalmanFIlterTrackingMouse.cpp
7-1找校正板角點/: CMakeLists.txt  FindChessBoardCorner.cpp
7-2校正鏡頭內參/: CMakeLists.txt  CalibrateCamera.cpp
8-1利用OpenCV自帶行人偵測/: CMakeLists.txt  OpenCVPeopleDetect.cpp
9-1-1車牌切割/: CMakeLists.txt  CarPlatSegment.cpp
9-1-4光學字元訓練辨識(類神經)/: CMakeLists.txt  OpticalCharacterTrainAndRecognitionANN.cpp
(+7 files in other folders)
